<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RecipEZ</string>
    <string name="logo_name">RecipEZ</string>
    <string name="btn_addToFridge">Add To Fridge</string>
    <string name="btn_getRecipes">Get Recipes</string>
    <string name="buttonText_login">Login</string>
    <string name="buttonText_register">Not a member? Register now!</string>
    <string name="buttonText_signUp">Sign Up</string>
    <string name="hint_registerUsername">Username</string>
    <string name="hint_username"><font size="12">Username</font></string>
    <string name="hint_password"><font size="12">Password</font></string>
    <string name="hint_confirmPassword">Confirm Password</string>
    <string name="errorMessage_InvalidCredentials">Username and Password are invalid!</string>
    <string name="errorMessage_EmptyFields">All fields are required!</string>
    <string name="errorMessage_UsernameTaken">Username is already taken!</string>
    <string name="errorMessage_PasswordsMustMatch">Passwords must match!</string>
    <string name="errorMessage_SignUpRequirements">Username and Password must be between 6 and 20 characters!</string>
    <string name="label_recipeDescription">Description</string>
    <string name="label_recipeIngredients">Ingredients</string>
    <string name="label_recipeDirections">Directions</string>
    <string name="logoDescription">RecipEZ</string>
    <string name="contentDescription_searchRecipes">Search Recipes</string>
    <string name="contentDescription_searchIngredients">Search Ingredients</string>
    <string name="contentDescription_editList">Edit List</string>
    <string name="contentDescription_favorites">Access Favorites</string>
    <string name="sv_query">Search for ingredients</string>

    <color name="skyBlue">#0EC0D6</color>
    <color name="darkBlue">#057B8B</color>
    <color name="white">#FFFFFF</color>
    <color name="red">#FF0000</color>

    <dimen name="standardHeight">40dp</dimen>
    <dimen name="standardWidth">225dp</dimen>
    <dimen name="square">125dp</dimen>

    <string name="action_settings">Settings</string>
    <string name="title_activity_search_recipes">SearchRecipesActivity</string>
    <string name="title_activity_edit_list">EditListActivity</string>
    <string name="title_activity_display_recipe">DisplayRecipe</string>
    <string name="title_activity_user_recipes">UserRecipesActivity</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="label_favorite">Favorite</string>
    <string name="buttonText_postComment">POST</string>
    <string name="commentText">Add Comment...</string>
    <color name="gold">#F5C04F</color>
    <string name="contentDescription_delete">Delete</string>
    <string name="contentDescription_getRecipes">Get Recipes</string>

</resources>