<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyBlue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fantastik4.recipez.Activitys.SignUpActivity" >

    <!-- Logo Image -->

    <ImageView
        android:id="@+id/tv_recipezLogo"
        android:layout_width="@dimen/square"
        android:layout_height="@dimen/square"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logoDescription"
        android:src="@drawable/logo" />

    <!-- Logo Text -->

    <TextView
        android:id="@+id/tv_logoName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:text="@string/logo_name"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <!-- Email Properties -->

    <EditText
        android:id="@+id/et_registerEmail"
        android:layout_width="@dimen/standardWidth"
        android:layout_height="@dimen/standardHeight"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        android:cursorVisible="false"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textSize="12sp" >

        <requestFocus />
    </EditText>

    <!-- Password Text Field -->

    <EditText
        android:id="@+id/et_registerPassword"
        android:layout_width="@dimen/standardWidth"
        android:layout_height="@dimen/standardHeight"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:cursorVisible="false"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textSize="12sp" />

    <!-- Password Confirm Text Field -->

    <EditText
        android:id="@+id/et_confirmPassword"
        android:layout_width="@dimen/standardWidth"
        android:layout_height="@dimen/standardHeight"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:cursorVisible="false"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/confirmpassword"
        android:ems="10"
        android:hint="@string/hint_confirmPassword"
        android:inputType="textPassword"
        android:textSize="12sp" />

    <!-- Sign Up Button -->

    <Button
        android:id="@+id/btn_clickToSignUp"
        android:layout_width="@dimen/standardWidth"
        android:layout_height="@dimen/standardHeight"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/darkBlue"
        android:onClick="validate"
        android:text="@string/buttonText_signUp"
        android:textColor="@color/white" />

</LinearLayout>